--- a/register.html
+++ b/register.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<title>ParqueSoft</title>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
     <a class="navbar-brand" href="#">ParqueSoft</a>
@@ -13,7 +14,7 @@
         </li>
        
         <li class="nav-item">
-          <a class="nav-link active" href="index.html" tabindex="-1">Contatanos</a>
+          <a class="nav-link active" href="index.html" tabindex="-1">contactos</a>
         </li>
   
         <li class="nav-item">
