--- a/usuario.html
+++ b/usuario.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Usuarios</title>
+    <title>ParqueSoft</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
   </head>
@@ -22,7 +22,7 @@
       </li>
      
       <li class="nav-item">
-        <a class="nav-link active" href="index.html" tabindex="-1">Contatanos</a>
+        <a class="nav-link active" href="index.html" tabindex="-1">contactos</a>
       </li>
 
       <li class="nav-item">
