--- a/index.html
+++ b/index.html
@@ -66,6 +66,37 @@
     </div>
       </div>
     </div>
+ <br>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Apellido</th>
+          <th scope="col">Ciudad</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>cali</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>bogotat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>medellin</td>
+        </tr>
+      </tbody>
+    </table>
       </div>
       
       </div>
@@ -112,6 +143,8 @@
       });
   
     </script>
+
+
   </body>
 </html>
 
